@@ -3,6 +3,9 @@ import os
 import tempfile
 import shutil
 from io import StringIO
+import warnings
+from test.support import check_warnings
+from test.support import captured_stdout
 
 from distutils.core import Extension, Distribution
 from distutils.command.build_ext import build_ext
@@ -394,6 +397,17 @@ class BuildExtTestCase(TempdirManager,
         path = cmd.get_ext_fullpath('twisted.runner.portmap')
         wanted = os.path.join(curdir, 'twisted', 'runner', 'portmap.so')
         self.assertEquals(wanted, path)
+
+    def test_compiler_deprecation_warning(self):
+        dist = Distribution()
+        cmd = build_ext(dist)
+
+        with check_warnings() as w:
+            warnings.simplefilter("always")
+            cmd.compiler = object()
+            self.assertEquals(len(w.warnings), 1)
+            cmd.compile = 'unix'
+            self.assertEquals(len(w.warnings), 1)
 
 def test_suite():
     src = _get_source_filename()
